name:                CryptographyClass
version:             0.1.0.0
synopsis:            Various Optional Programming assignments from https://www.coursera.org/learn/cryptography
description:         Please see README.md
homepage:            http://github.com/bendoerr/UoMCourseraCryptographyProgrammingAssignments#readme
license:             BSD3
license-file:        LICENSE
author:              Benjamin R. Doerr
maintainer:          craftsman@bendoerr.me
copyright:           2016 Benjamin R. Doerr
category:            Crypto
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Assignment1.Convert
                     , Assignment1.Frequency
                     , Assignment1.XOR
                     , Assignment1.Evaluate
                     , Assignment1.Bits
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , base16-bytestring
                     , base64-bytestring
                     , containers
                     , word8
                     , tokenize
  default-language:    Haskell2010

executable CryptographyClass
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , CryptographyClass
                     , bytestring
                     , text
  default-language:    Haskell2010

test-suite CryptographyClass-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , CryptographyClass
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/UoMCourseraCryptographyProgrammingAssignments
